tests/baselines/reference/parserMissingToken1.errors.txt
parserMissingToken1.ts(1,1): error TS2304: Cannot find name 'a'.
parserMissingToken1.ts(1,5): error TS1109: Expression expected.
parserMissingToken1.ts(1,12): error TS1005: '{' expected.


==== parserMissingToken1.ts (3 errors) ====
    a / finally
    ~
!!! error TS2304: Cannot find name 'a'.
        ~~~~~~~
!!! error TS1109: Expression expected.
               
!!! error TS1005: '{' expected.